--- a/src/components/CarList/CarList.module.css
+++ b/src/components/CarList/CarList.module.css
@@ -1,6 +1,15 @@
 .carList {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 1.5rem;
-  padding: 1rem;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 32px;
+  margin-top: 56px;
+  /* max-width: calc(100% - 240px); Зменшуємо ширину на два відступи по 120px */
+  margin-left: 120px; /* Відступ 120px з лівого боку */
+  margin-right: 120px; /* Відступ 120px з правого боку */
+}
+
+.noCars {
+  text-align: center;
+  color: #666;
+  padding: 20px;
 }
