--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -1,34 +1,46 @@
 .filters {
   display: flex;
-  gap: 10px;
-  padding: 10px;
-  background-color: #f0f0f0;
-  border-radius: 5px;
+  width: 924px; /* Адаптивна ширина */
+  max-width: 800px; /* Обмеження для великих екранів */
+  height: 68px;
+  gap: 16px;
+  margin-top: 84px;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto; /* Центруємо контейнер */
 }
 
 .filterGroup {
+  border-radius: 12px;
+  padding: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
+  max-width: 200px; /* Обмеження для кожного фільтра */
 }
 
 .filterGroup label {
-  font-size: 0.9em;
-  color: #333;
-  margin-bottom: 5px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 133%;
+  font-family: 'Manrope', sans-serif;
+  color: #8e929a;
+  margin-bottom: 4px;
+  text-align: left;
 }
 
 .select {
   padding: 8px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 12px;
   height: 40px;
   max-height: 200px;
   overflow-y: auto;
-  appearance: none;
-  background-color: white;
+  /*  appearance: none;Прибираємо стандартну стрілку */
+  background-color: #dadde1;
   cursor: pointer;
+  width: 100%; /* Заповнює батьківський контейнер */
+  box-sizing: border-box; /* Включаємо padding у ширину */
 }
 
 .select:disabled {
@@ -38,56 +50,54 @@
 
 .mileageRange {
   display: flex;
-  gap: 5px;
+  gap: 1px;
 }
 
 .input {
   padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 1px solid #dadde1;
+  border-radius: 12px 0 0 12px;
   width: 100%;
   height: 40px;
+  box-sizing: border-box;
+  background-color: #dadde1;
+  color: #101828;
 }
+.input1 {
+  padding: 8px;
+  border: 1px solid #ccc;
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  border-radius: 0 12px 12px 0;
+  background-color: #dadde1;
 
+  color: #101828;
+}
 .input:disabled {
-  background-color: #e9ecef;
   cursor: not-allowed;
+  color: #101828;
 }
 
 .searchButton {
-  padding: 8px 20px;
-  background-color: #007bff;
-  color: white;
+  margin-top: 17px;
+  padding: 12px 51px;
+  width: 156px;
+  height: 44px;
+  background-color: #3470ff;
+  border-radius: 12px;
+  color: #ffffff;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
-  height: 40px;
+  min-width: 100px;
+  transition: background-color 0.3s ease;
 }
 
 .searchButton:hover:not(:disabled) {
-  background-color: #0056b3;
+  background-color: #0b44cd;
 }
 
 .searchButton:disabled {
-  background-color: #6c757d;
-  cursor: not-allowed;
-}
-
-.clearButton {
-  padding: 8px 20px;
-  background-color: #dc3545;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  height: 40px;
-}
-
-.clearButton:hover:not(:disabled) {
-  background-color: #c82333;
-}
-
-.clearButton:disabled {
   background-color: #6c757d;
   cursor: not-allowed;
 }
