--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -8,11 +8,11 @@
   font-family: 'Manrope', sans-serif;
 
   margin: 0 auto;
-  display: none; /* Приховуємо за замовчуванням */
+  display: none;
 }
 
 .customCalendar.active {
-  display: block; /* Показуємо при активації */
+  display: block;
 }
 
 .header {
@@ -75,7 +75,7 @@
   transition: background-color 0.2s, border-color 0.2s;
   display: flex;
   justify-content: center;
-  align-items: center; /* Додатково центруємо число */
+  align-items: center;
 }
 
 .day:hover {
