--- a/src/components/LoadMoreButton/LoadMoreButton.module.css
+++ b/src/components/LoadMoreButton/LoadMoreButton.module.css
@@ -1,14 +1,14 @@
 .loadMore {
   margin-top: 80px;
   margin-bottom: 124px;
-  background-color: transparent; /* робить фон кнопки прозорим */
-  border: 1px solid #3470ff; /* встановлює рамку, щоб кнопка залишалась видимою */
-  color: #000; /* колір тексту */
-  padding: 10px 20px; /* відступи */
+  background-color: transparent;
+  border: 1px solid #3470ff;
+  color: #000;
+  padding: 10px 20px;
   width: 156px;
   height: 44px;
-  font-size: 16px; /* розмір шрифту */
-  cursor: pointer; /* змінює курсор на pointer при наведенні */
+  font-size: 16px;
+  cursor: pointer;
 }
 
 .loadMore:hover {
