--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 a:hover {
-  color: #0056b3;
+  color: #0b44cd;
 }
 
 body {
@@ -31,7 +31,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #0056b3;
+  border-color: #0b44cd;
 }
 button:focus,
 button:focus-visible {
