--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -36,7 +36,7 @@
   height: 40px;
   max-height: 200px;
   overflow-y: auto;
-  background-color: #dadde1;
+  background-color: #f7f7f7;
   cursor: pointer;
   width: 100%;
   box-sizing: border-box;
@@ -59,7 +59,7 @@
   width: 100%;
   height: 40px;
   box-sizing: border-box;
-  background-color: #dadde1;
+  background-color: #f7f7f7;
   color: #101828;
 }
 .input1 {
@@ -69,7 +69,7 @@
   height: 40px;
   box-sizing: border-box;
   border-radius: 0 12px 12px 0;
-  background-color: #dadde1;
+  background-color: #f7f7f7;
 
   color: #101828;
 }
