--- a/src/components/CarCard/CarCard.module.css
+++ b/src/components/CarCard/CarCard.module.css
@@ -3,6 +3,7 @@
   overflow: hidden;
   width: 276px;
   position: relative;
+  text-align: left;
 }
 
 .carCard img {
@@ -106,8 +107,11 @@
   text-decoration: none;
   border-radius: 12px;
   margin-top: 28px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .readMoreButton:hover {
-  background-color: #0056b3;
+  background-color: #0b44cd;
+  color: white;
 }
